# wasmabi

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_and_run.sh  build_debug.sh  build_release.sh  clang-helpers.sh  create_configs.sh  run_tests.sh
docs/: POLISH.md
src/: CMakeLists.txt  main.cpp
src/Compiler/: Compiler.cpp  Compiler.hpp
src/Errors/: ErrorHandler.cpp  ErrorHandler.hpp  ErrorTypes.cpp  ErrorTypes.hpp
src/Generator/: Generator.cpp  Generator.hpp
src/Helpers/: OstreamModifier.hpp
src/Lexer/: Lexer.cpp  Lexer.hpp
src/Node/: Node.cpp  Node.hpp
src/Nodes/: Node.cpp  Node.hpp
src/ParenthesisPrintVisitor/: ParenthesisPrintVisitor.cpp  ParenthesisPrintVisitor.hpp
src/Parser/: Parser.cpp  Parser.hpp
src/PrintVisitor/: PrintVisitor.cpp  PrintVisitor.hpp
src/SourceController/: SourceController.cpp  SourceController.hpp
src/Token/: Token.cpp  Token.hpp
src/Visitor/: Visitor.cpp  Visitor.hpp
src/helpers/: VariantOstream.hpp
tests/: CMakeLists.txt  SourceControllerTest.cpp  mainTest.cpp
tests/GeneratorTests/: GeneratorTests.cpp
tests/Helpers/: NullOstream.hpp
tests/LexerTests/: Keywords.cpp  LexerTest.cpp  PreDocsExample1.cpp  PreDocsExample2.cpp  PreDocsExample3.cpp  PreDocsExample4.cpp  PreDocsExample5.cpp
tests/ParserTests/: ParserTests.cpp  ParserThrowTests.cpp
tests/examples/: preDocs1.wa  preDocs2.wa  preDocs3.wa  preDocs4.wa  preDocs5.wa
tests/examples-ll/: preDocs1.ll
vscode-debug/: Dockerfile
